@@ -2,12 +2,15 @@ package ru.practicum.stats.service;
 
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.server.ResponseStatusException;
 import ru.practicum.stats.dto.EndpointHitDto;
 import ru.practicum.stats.dto.ViewStatsDto;
 import ru.practicum.stats.mapper.StatsMapper;
@@ -16,14 +19,11 @@ import ru.practicum.stats.repository.EndpointHitRepository;
 
 @Service
 @Transactional(readOnly = true)
+@RequiredArgsConstructor
 public class StatsServiceImpl implements StatsService {
     private static final DateTimeFormatter FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
 
     private final EndpointHitRepository endpointHitRepository;
-
-    public StatsServiceImpl(EndpointHitRepository endpointHitRepository) {
-        this.endpointHitRepository = endpointHitRepository;
-    }
 
     @Override
     @Transactional
@@ -35,6 +35,11 @@ public class StatsServiceImpl implements StatsService {
     public List<ViewStatsDto> getStats(String start, String end, List<String> uris, boolean unique) {
         LocalDateTime startTime = parseDateTime(start);
         LocalDateTime endTime = parseDateTime(end);
+
+        if (startTime.isAfter(endTime)) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Начало должно быть перед временем окончания.");
+        }
+
         List<String> uriFilter = uris == null ? Collections.emptyList() : uris;
         boolean urisEmpty = uriFilter.isEmpty();
 
@@ -44,18 +49,14 @@ public class StatsServiceImpl implements StatsService {
 
         return stats.stream()
                 .map(StatsMapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    private ViewStatsDto toDto(EndpointHitRepository.ViewStatsProjection projection) {
-        ViewStatsDto dto = new ViewStatsDto();
-        dto.setApp(projection.getApp());
-        dto.setUri(projection.getUri());
-        dto.setHits(projection.getHits());
-        return dto;
+                .toList();
     }
 
     private LocalDateTime parseDateTime(String value) {
-        return LocalDateTime.parse(value, FORMATTER);
+        try {
+            return LocalDateTime.parse(value, FORMATTER);
+        } catch (DateTimeParseException ex) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Не получилось отформатировать дату.", ex);
+        }
     }
 }
